zokrates_cli/examples/compile_errors/reserved_log.zok
// "log" is reserved
def log() {
    return;
}

def main() {
    return;
}